--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
         #list {
         background-color:white;
         box-shadow:0 1px 3px 0 rgba(0,0,0,0.1);
-        border-radius:4px;
+        border-radius:6px;
         width:100%;
-        height:auto;
+        height:90px;
         position:relative;
         }
 .pos li {
         display:block;
-        padding:3%;
+        padding:2%;
     }
     .pos ul {
         padding:0;
