--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <style>
         body {
-            background:#2196f3;
+            background:#00478e;
             padding:0;
             margin:0;
             font-family:arial;
@@ -24,23 +24,23 @@
     
 </head>
 <body>
-    <style>
-        #list {
-        background-color:white;
-        box-shadow:0 1px 3px 0 rgba(0,0,0,0.1);
-        border-radius:6px;
-        width:100%;
-        height:90px;
-        position:relative;
-        }
-.pos li {
-        display:block;
-        padding:2%;
+  <style>
+    #list {
+      background-color:#fff;
+      box-shadow:0 1px 3px 0 rgba(0,0,0,0.1);
+      border-radius:6px;
+      width:100%;
+      height:90px;
+      position:relative;
     }
-    .pos ul {
-        padding:0;
-        margin:0;
-    }
+  .pos li {
+    display:block;
+    padding:2%;
+  }
+  .pos ul {
+    padding:0;
+    margin:0;
+  }
 .box {
 position: relative;
 }
@@ -48,7 +48,7 @@ position: relative;
 .box input:valid + label,
 .box textarea:focus + label,
 .box textarea:valid + label {
-color: #005eff;
+color: #0077af;
 top: -13px;
 }
 .box input:focus + label:after,
@@ -73,7 +73,7 @@ color: grey;
 border-radius: 50px;
 }
 #opi:hover {
-    color:#005eff;
+    color:#0077af;
 }
 .boxx {
 position: relative;
@@ -82,12 +82,12 @@ position: relative;
 .boxx input:valid + label,
 .boxx textarea:focus + label,
 .boxx textarea:valid + label {
-color: #005eff;
+color: #0077af;
 top: -13px;
 left:36%;
 }
 .piol {
-    color:#005eff;
+    color:#0077af;
 }
 .rig {
     color:grey;
@@ -113,131 +113,169 @@ border-radius: 50px;
 color: grey;
 border-radius: 50px;
 }
-.btn-success:hover {
-    border:1px solid grey;
-    color:grey;
+.btn-success {
+  float:right;
+  border-color: #0077af;
+  color: #0077af;
+  background: #fff;
+  transition-duration: 0.5s;
 }
-.judul h3 {
-color: white;
+.btn-success:hover {
+    border:1px solid #0077af;
+    color: #fff;
+    background: #0077af;
+}
+.judul {
+background: white;
+width: 96%;
+height: 60px;
+margin: 2%;
+position: relative;
+border-radius: 0px 0px 10px 10px;
 }
 .container h4 {
-color: #005eff;
+margin-left: -15px;
+margin-top: -0.1px;
+padding: 4px 5px 2px 10px;
+color: #fff;
+background: #47d09b;
+width: 34%;
+border-radius: 0px 0px 30px 0px;
+}
+.container h5 {
+  color: #0077af;
+  font-size: 14px;
 }
 </style>
 <div class="judul">
-  <h3><center>Free Fire</center></h3>
+  <center><img src="freefire-banner.png" width="60%"></img></center>
 </div>
 <br/>
-<br/>
 <div id="pusat">
-    <div class="">
-        <div class="pos">
-            <ul>
-
-        <!--FREEFIRE-->
-                <li>
-                  <div id="list">
-                    <div class="container">
-                      <h4>Free Fire</h4>
-                      <a href="https://putrapayment.bukaolshop.site/produk/free-fire-diamond-5-1059704"><button style="float:right;border-color:#005eff;color:#005eff;background:none;" class="btn btn-success">Beli</button></a>
-                      <small style="color:#005eff;">5 DIAMONDS</small style><br />
-                      <small style="color:#005eff;">Rp 905</small>
-                      <br />
-                      <small style="color:transparent;">error89</small>
-                      <small style="color:transparent;">eror67</small>
-                    </div>
-                  </div>
-                </li>
-                <li>
-                  <div id="list">
-                    <div class="container">
-                      <h4>Free Fire</h4>
-                      <a href="https://putrapayment.bukaolshop.site/produk/free-fire-diamond-10-1059707"><button style="float:right;border-color:#005eff;color:#005eff;background:none;" class="btn btn-success">Beli</button></a>
-                      <small style="color:#005eff;">10 DIAMONDS</small style><br />
-                      <small style="color:#005eff;">Rp 1.700</small>
-                      <br />
-                      <small style="color:transparent;">error89</small>
-                      <small style="color:transparent;">eror67</small>
-                    </div>
-                  </div>
-                </li>
-                <li>
-                  <div id="list">
-                    <div class="container">
-                      <h4>Free Fire</h4>
-                      <a href="https://putrapayment.bukaolshop.site/produk/free-fire-diamond-50-1026445"><button style="float:right;border-color:#005eff;color:#005eff;background:none;" class="btn btn-success">Beli</button></a>
-                      <small style="color:#005eff;">50 DIAMONDS</small style><br />
-                      <small style="color:#005eff;">Rp 6.600</small>
-                      <br />
-                      <small style="color:transparent;">error89</small>
-                      <small style="color:transparent;">eror67</small>
-                    </div>
-                  </div>
-                </li>
-                <li>
-                  <div id="list">
-                    <div class="container">
-                      <h4>Free Fire</h4>
-                      <a href="https://putrapayment.bukaolshop.site/produk/free-fire-diamond-50-promo-1290658"><button style="float:right;border-color:#005eff;color:#005eff;background:none;" class="btn btn-success">Beli</button></a>
-                      <small style="color:#005eff;">50 DIAMONDS PROMO</small style><br />
-                      <small style="color:#005eff;">Rp 6.585</small>
-                      <br />
-                      <small style="color:transparent;">error89</small>
-                      <small style="color:transparent;">eror67</small>
-                    </div>
-                  </div>
-                </li>
-                <li>
-                  <div id="list">
-                    <div class="container">
-                      <h4>Free Fire</h4>
-                      <a href="https://putrapayment.bukaolshop.site/produk/free-fire-diamond-70-902771"><button style="float:right;border-color:#005eff;color:#005eff;background:none;" class="btn btn-success">Beli</button></a>
-                      <small style="color:#005eff;">70 DIAMONDS</small style><br />
-                      <small style="color:#005eff;">Rp 8.985</small>
-                      <br />
-                      <small style="color:transparent;">error89</small>
-                      <small style="color:transparent;">eror67</small>
-                    </div>
-                  </div>
-                </li>
-                <li>
-                  <div id="list">
-                    <div class="container">
-                      <h4>Free Fire</h4>
-                      <a href="https://putrapayment.bukaolshop.site/produk/free-fire-diamond-140-1059718"><button style="float:right;border-color:#005eff;color:#005eff;background:none;" class="btn btn-success">Beli</button></a>
-                      <small style="color:#005eff;">140 DIAMONDS</small style><br />
-                      <small style="color:#005eff;">Rp 17.850</small>
-                      <br />
-                      <small style="color:transparent;">error89</small>
-                      <small style="color:transparent;">eror67</small>
-                    </div>
-                  </div>
-                </li>
-                <li>
-                  <div id="list">
-                    <div class="container">
-                      <h4>Free Fire</h4>
-                      <a href="https://putrapayment.bukaolshop.site/produk/free-fire-diamond-210-1280340"><button style="float:right;border-color:#005eff;color:#005eff;background:none;" class="btn btn-success">Beli</button></a>
-                      <small style="color:#005eff;">210 DIAMONDS</small style><br />
-                      <small style="color:#005eff;">Rp 26.955</small>
-                      <br />
-                      <small style="color:transparent;">error89</small>
-                      <small style="color:transparent;">eror67</small>
-                    </div>
-                  </div>
-                </li>
-                <li>
-                  <div id="list">
-                    <div class="container">
-                      <h4>Free Fire</h4>
-                      <a href="https://putrapayment.bukaolshop.site/produk/free-fire-diamond-355-1280728"><button style="float:right;border-color:#005eff;color:#005eff;background:none;" class="btn btn-success">Beli</button></a>
-                      <small style="color:#005eff;">355 DIAMONDS</small style><br />
-                      <small style="color:#005eff;">Rp 46.950</small>
-                      <br />
-                      <small style="color:transparent;">error89</small>
-                      <small style="color:transparent;">eror67</small>
-                    </div>
-                  </div>
-                </li>
+  <div class="">
+    <div class="pos">
+      <ul>
+      <!--FREEFIRE-->
+      <li>
+        <div id="list">
+          <div class="container">
+            <h4>Free Fire</h4>
+            <a href="https://putrapayment.bukaolshop.site/produk/free-fire-diamond-5-1059704">
+            <button style="float:right;border-color:#0077af;color:#0077af;background:none;" class="btn btn-success">Beli
+            </button></a>
+            <h5>5 DIAMOND</h5>
+            <h5>Rp 1.000</h5>
+          </div>
+        </div>
+      </li>
+      <li>
+        <div id="list">
+          <div class="container">
+            <h4>Free Fire</h4>
+            <a href="https://putrapayment.bukaolshop.site/produk/free-fire-diamond-10-1059707">
+              <button style="float:right;border-color:#0077af;color:#0077af;background:none;" class="btn btn-success">Beli
+              </button></a>
+            <h5>10 DIAMOND</h5>
+            <h5>Rp 1.830</h5>
+          </div>
+        </div>
+      </li>
+      <li>
+        <div id="list">
+          <div class="container">
+            <h4>Free Fire</h4>
+            <a href="https://putrapayment.bukaolshop.site/produk/free-fire-diamond-50-1026445">
+              <button style="float:right;border-color:#0077af;color:#0077af;background:none;" class="btn btn-success">Beli
+              </button></a>
+            <h5>50 DIAMOND</h5>
+            <h5>Rp 6.625</h5>
+          </div>
+        </div>
+      </li>
+      <li>
+        <div id="list">
+          <div class="container">
+            <h4>Free Fire</h4>
+            <a href="https://putrapayment.bukaolshop.site/produk/free-fire-diamond-70-902771">
+              <button style="float:right;border-color:#0077af;color:#0077af;background:none;" class="btn btn-success">Beli
+              </button></a>
+            <h5>70 DIAMOND</h5>
+            <h5>Rp 9.015</h5>
+          </div>
+        </div>
+      </li>
+      <li>
+        <div id="list">
+          <div class="container">
+            <h4>Free Fire</h4>
+            <a href="https://putrapayment.bukaolshop.site/produk/free-fire-diamond-100-1292342">
+              <button style="float:right;border-color:#0077af;color:#0077af;background:none;" class="btn btn-success">Beli
+              </button></a>
+            <h5>100 DIAMOND</h5>
+            <h5>Rp 13.135</h5>
+          </div>
+        </div>
+      </li>
+      <li>
+        <div id="list">
+          <div class="container">
+            <h4>Free Fire</h4>
+            <a href="https://putrapayment.bukaolshop.site/produk/free-fire-diamond-140-1059718">
+              <button style="float:right;border-color:#0077af;color:#0077af;background:none;" class="btn btn-success">Beli
+              </button></a>
+            <h5>140 DIAMOND</h5>
+            <h5>Rp 17.835</h5>
+          </div>
+        </div>
+      </li>
+      <li>
+        <div id="list">
+          <div class="container">
+            <h4>Free Fire</h4>
+            <a href="https://putrapayment.bukaolshop.site/produk/free-fire-diamond-210-1280340">
+              <button style="float:right;border-color:#0077af;color:#0077af;background:none;" class="btn btn-success">Beli
+              </button></a>
+            <h5>210 DIAMOND</h5>
+            <h5>Rp 26.875</h5>
+          </div>
+        </div>
+      </li>
+      <li>
+        <div id="list">
+          <div class="container">
+            <h4>Free Fire</h4>
+            <a href="https://putrapayment.bukaolshop.site/produk/free-fire-diamond-280-1291304">
+              <button style="float:right;border-color:#0077af;color:#0077af;background:none;" class="btn btn-success">Beli
+              </button></a>
+            <h5>280 DIAMOND</h5>
+            <h5>Rp 35.750</h5>
+          </div>
+        </div>
+      </li>
+      <li>
+        <div id="list">
+          <div class="container">
+            <h4>Free Fire</h4>
+            <a href="https://putrapayment.bukaolshop.site/produk/free-fire-diamond-355-1280728">
+              <button style="float:right;border-color:#0077af;color:#0077af;background:none;" class="btn btn-success">Beli
+              </button></a>
+            <h5>355 DIAMOND</h5>
+            <h5>Rp 45.525</h5>
+          </div>
+        </div>
+      </li>
+      <li>
+        <div id="list">
+          <div class="container">
+            <h4>Free Fire</h4>
+            <a href="https://putrapayment.bukaolshop.site/produk/free-fire-diamond-720-1291303">
+              <button style="float:right;border-color:#0077af;color:#0077af;background:none;" class="btn btn-success">Beli
+              </button></a>
+            <h5>720 DIAMOND</h5>
+            <h5>Rp 90.275</h5>
+          </div>
+        </div>
+      </li>
+      </ul>
 </body>
 </html>
